--- a/inst/scripts/Beaty.Rnw
+++ b/inst/scripts/Beaty.Rnw
@@ -12,13 +12,20 @@ to submit (must be on a fat node).
 Remove the whole genome amplified samples for now and focus on
 chromosome 1 so that we can work with matrices instead of ff objects.
 
-%\SweaveInput{DNAsource}
+% \SweaveInput{DNAsource}
 
 \SweaveInput{Exclusions}
 
 \SweaveInput{CallDeletions}
 
 \SweaveInput{CallDenovo}
+
+\SweaveInput{CommonVariants}
+
+\SweaveInput{DenovoFigures}
+
+\SweaveInput{AllChromosomes.Rnw}
+
 
 
 %\SweaveInput{PlotDenovo}
